@@ -123,7 +123,9 @@ Internal:
   Fixes "Unknown 140" bug; improves detection of custom headgears.
 - All players and monsters (members of %monsters and %players) are now
   objects. See Monster.pm and Player.pm for available methods, both of
-  which inherit Actor.pm.
+  which inherit Actor.pm. Also You.pm and Unknown.pm.
+- New Actor::getActor($ID) function is sort of like
+  $ID eq $accountID ? $char : ($monsters{$ID} || $players{$ID})
 
 Credits:
 - Damokles: case sensitivity fix, avoidGM_namePattern.
